# jetscan-android

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci-cd-workflow.yml
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/schemas/io.github.dracula101.jetscan.data.document.datasource.disk.database.DocumentDatabase/: 1.json
app/schemas/io.github.dracula101.jetscan.data.document.datasource.disk.database.DocumentFoldersDatabase/: 1.json
app/schemas/io.github.dracula101.jetscan.data.scanned_document.datasource.disk.database.ScannedDocumentDatabase/: 1.json  2.json
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/dracula101/jetscan/: JetScanApplication.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/io/github/dracula101/jetscan/data/auth/datasource/: AuthDataSource.kt  AuthDataSourceImpl.kt
app/src/main/java/io/github/dracula101/jetscan/data/auth/di/: AuthModule.kt
app/src/main/java/io/github/dracula101/jetscan/data/auth/model/: AuthState.kt  GoogleSignInResult.kt  LoginResult.kt  RegisterResult.kt  UpdateProfileResult.kt  (+1 more)
app/src/main/java/io/github/dracula101/jetscan/presentation/theme/: Color.kt  Shape.kt  Theme.kt  Transition.kt  Type.kt
app/src/main/res/drawable/: all_tools.xml  app_icon.xml  app_icon_foreground.xml  authentication.xml  avd_anim_splash_screen.xml  compress_pdf.xml  docx_icon.xml  drive_export.xml  esign_pdf.xml  file_and_folder.xml  flash_auto.xml  flash_off.xml  flash_on.xml  folder_icon.xml  google_icon.xml  ic_error.xml  ic_folder.xml  ic_launcher_foreground.xml  icon_search.xml  image_error.xml  merge_pdf.xml  no_documents_bg.xml  no_folder_bg.xml  onboarding_ocr.xml  onboarding_organize.xml  onboarding_scan.xml  ppt_icon.xml  pptx_icon.xml  protect_pdf.xml  qr_code.xml  register_illustration.xml  split_pdf.xml  sticky_note.xml  txt_icon.xml  video_icon.xml  watermark_pdf.xml  xls_icon.xml  xlsx_icon.xml  zip_icon.xml
app/src/main/res/layout/: content_crop.xml  crop_activity.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/raw/: doc_scan_overlay_anim.lottie
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  ic_launcher_debug_background.xml  ic_launcher_release_background.xml  strings.xml  themes.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: backup_rules.xml  file_provider_rules.xml  provider_paths.xml  remote_config_defaults.xml
docs/: ARCHITECTURE.md
functions/: index.js  package-lock.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nativecore/: .gitignore  consumer-rules.pro  proguard-rules.pro
nativecore/src/androidTest/kotlin/io/github/dracula101/nativecore/: NativeImageProcessorTest.kt  NativePdfManagerTest.kt
nativecore/src/main/cpp/: CMakeLists.txt  setup_third_party.sh
nativecore/src/main/cpp/cmake/: hpdf_config.h.in
nativecore/src/main/cpp/image/channel_ops/: channel_ops.cpp  channel_ops.h  type_convert.cpp  type_convert.h
nativecore/src/main/cpp/image/codec/: image_reader.cpp  image_reader.h  image_writer.cpp  image_writer.h  jpeg_codec.cpp  jpeg_codec.h  png_codec.cpp  png_codec.h  webp_codec.cpp  webp_codec.h
nativecore/src/main/cpp/image/color/: grayscale.cpp  grayscale.h  rgb_hsv.cpp  rgb_hsv.h  rgb_lab.cpp  rgb_lab.h  yuv_converter.cpp  yuv_converter.h
nativecore/src/main/cpp/image/core/: bitmap_bridge.cpp  bitmap_bridge.h  image.cpp  image.h  simd_utils.h
nativecore/src/main/cpp/image/document/: corner_refiner.cpp  corner_refiner.h  deskewer.cpp  deskewer.h  document_detector.cpp  document_detector.h  page_cropper.cpp  page_cropper.h
nativecore/src/main/cpp/image/edge/: canny.cpp  canny.h  contour_tracer.cpp  contour_tracer.h  harris.cpp  harris.h  sobel.cpp  sobel.h
nativecore/src/main/cpp/image/effect/: effect_dispatcher.cpp  effect_dispatcher.h
nativecore/src/main/cpp/image/extra/: color_halftone.cpp  color_halftone.h  colorize.cpp  colorize.h  mser.cpp  mser.h
nativecore/src/main/cpp/image/filter/: bilateral_filter.cpp  bilateral_filter.h  convolution.cpp  convolution.h  gaussian_blur.cpp  gaussian_blur.h  median_blur.cpp  median_blur.h  sharpen.cpp  sharpen.h
nativecore/src/main/cpp/image/geometry/: convex_hull.cpp  convex_hull.h  homography.cpp  homography.h  intersection.cpp  intersection.h  poly_approx.cpp  poly_approx.h  quad_utils.cpp  quad_utils.h  warp_affine.cpp  warp_affine.h  warp_perspective.cpp  warp_perspective.h
nativecore/src/main/cpp/image/hough/: hough_probabilistic.cpp  hough_probabilistic.h  hough_standard.cpp  hough_standard.h  line_bundler.cpp  line_bundler.h
nativecore/src/main/cpp/image/morphology/: dilation.cpp  dilation.h  erosion.cpp  erosion.h  morph_ops.cpp  morph_ops.h  structuring_element.cpp  structuring_element.h
nativecore/src/main/cpp/image/normalize/: normalizer.cpp  normalizer.h
nativecore/src/main/cpp/image/pixel_ops/: pixel_ops.cpp  pixel_ops.h
nativecore/src/main/cpp/image/threshold/: adaptive_threshold.cpp  adaptive_threshold.h  global_threshold.cpp  global_threshold.h
nativecore/src/main/cpp/jni/: jni_helpers.cpp  jni_helpers.h  jni_image_processor.cpp  jni_pdf_processor.cpp
nativecore/src/main/cpp/pdf/crypto/: pdf_crypto.cpp  pdf_crypto.h
nativecore/src/main/cpp/pdf/generation/: pdf_builder.cpp  pdf_builder.h
nativecore/src/main/cpp/pdf/manipulation/: pdf_merge_split.cpp  pdf_merge_split.h
nativecore/src/main/kotlin/io/github/dracula101/nativecore/: ImageProcessor.kt  JetScanNative.kt  NativeImageProcessor.kt  NativePdfManager.kt
pdf/: build.gradle.kts  proguard-rules.pro
pdf/src/main/java/io/github/dracula101/pdf/manager/: PdfManager.kt  PdfManagerImpl.kt
pdf/src/main/java/io/github/dracula101/pdf/models/: PdfCompressionLevel.kt  PdfOptions.kt  PdfPageSize.kt  PdfQuality.kt
pdf/src/main/java/io/github/dracula101/pdf/ui/: PdfLoader.kt  PdfMarker.kt  PdfReader.kt  PdfTranformable.kt  PdfTransformDetector.kt  PdfTransformState.kt
pdf/src/main/java/io/github/dracula101/pdf/util/: Scrollbar.kt
(+405 files in other folders)
